# rustcivic

./: Cargo.toml  README.md
civic-sample-files/: nightly-AssertionSummaries.tsv  nightly-ClinicalEvidenceSummaries.tsv  nightly-FeatureSummaries.tsv  nightly-MolecularProfileSummaries.tsv  nightly-VariantSummaries.tsv  nightly-civic_accepted.vcf  nightly-civic_accepted_and_submitted.vcf
